--- a/config.json
+++ b/config.json
@@ -6,11 +6,11 @@
   },
   "api_ip": "127.0.0.1",
   "api_port": 8082,
-  "platform": "bilibili2",
-  "room_display_id": "8604123",
-  "chat_type": "alice",
+  "platform": "talk",
+  "room_display_id": "278333",
+  "chat_type": "reread",
   "need_lang": "none",
-  "before_prompt": "",
+  "before_prompt": "请简要回复:",
   "after_prompt": "",
   "comment_log_type": "回答",
   "visual_body": "其他",
@@ -23,7 +23,7 @@
   },
   "play_audio": {
     "enable": true,
-    "text_split_enable": false,
+    "text_split_enable": true,
     "normal_interval": 0.5,
     "out_path": "out",
     "player": "pygame"
@@ -53,16 +53,16 @@
     "unity": true
   },
   "bilibili": {
-    "login_type": "open_live",
+    "login_type": "手机扫码",
     "username": "",
     "password": "",
     "cookie": "",
     "ac_time_value": "",
     "open_live": {
-      "ACCESS_KEY_ID": "9B9RVRi3B5U8vpOHUiEC227K",
-      "ACCESS_KEY_SECRET": "aAZttnnhV7KU9HHnDYKAZj0PYdq8Fy",
-      "APP_ID": 1709177966272,
-      "ROOM_OWNER_AUTH_CODE": "DALBLIW95QTC5"
+      "ACCESS_KEY_ID": "",
+      "ACCESS_KEY_SECRET": "",
+      "APP_ID": 0,
+      "ROOM_OWNER_AUTH_CODE": ""
     }
   },
   "twitch": {
@@ -87,8 +87,8 @@
     ]
   },
   "read_comment": {
-    "enable": false,
-    "read_username_enable": false,
+    "enable": true,
+    "read_username_enable": true,
     "username_max_len": 10,
     "voice_change": false,
     "read_username_copywriting": [
@@ -102,11 +102,9 @@
     "before_filter_str": [
       "#"
     ],
-    "after_filter_str": [
-      "#"
-    ],
+    "after_filter_str": [],
     "badwords": {
-      "enable": false,
+      "enable": true,
       "discard": false,
       "path": "data/badwords.txt",
       "bad_pinyin_path": "data/违禁拼音.txt",
@@ -131,7 +129,7 @@
     "idle_time_task_forget_reserve_num": 1
   },
   "thanks": {
-    "entrance_enable": false,
+    "entrance_enable": true,
     "entrance_random": true,
     "username_max_len": 10,
     "entrance_copy": [
@@ -143,14 +141,14 @@
       "客官里面请~",
       "雅座一位，请~"
     ],
-    "gift_enable": false,
+    "gift_enable": true,
     "gift_random": true,
     "gift_copy": [
       "感谢{username}送的{gift_name}，爱你么么哒",
       "感谢{username}送的{gift_name}喵",
       "就送个{gift_name}？看不起谁呢？"
     ],
-    "follow_enable": false,
+    "follow_enable": true,
     "follow_random": true,
     "follow_copy": [
       "感谢{username}的关注，爱你么么哒",
@@ -164,18 +162,20 @@
     "port": 12345
   },
   "openai": {
-    "api": "",
-    "api_key": [],
+    "api": "https://api.openai.com/v1",
+    "api_key": [
+      "替换为你的api-key"
+    ],
     "model": "gpt-3.5-turbo"
   },
   "chatgpt": {
-    "model": "gpt-3.5-turbo",
+    "model": "gpt-3.5-turbo-0613",
     "temperature": 0.9,
     "max_tokens": 4096,
-    "top_p": 0.5,
+    "top_p": 1.0,
     "presence_penalty": 0.0,
     "frequency_penalty": 0.0,
-    "preset": "现在你正在blibili进行直播。"
+    "preset": "请扮演一个AI虚拟主播。不要回答任何敏感问题！不要强调你是主播，只需要回答问题！"
   },
   "claude": {
     "slack_user_token": "",
@@ -191,23 +191,13 @@
     }
   },
   "chatglm": {
-    "api_ip_port": "http://localhost:8000/v1/chat/completions",
-    "max_length": 4096,
-    "top_p": 0.1,
-    "temperature": 0.8,
-    "max_new_tokens": 250,
-    "history_enable": true,
-    "history_max_len": 500
-  },
-  "alice": {
-    "api_ip_port": "http://localhost:8000/v1/chat/completions",
-    "max_length": 4096,
-    "top_p": 0.5,
+    "api_ip_port": "http://127.0.0.1:8000",
+    "max_length": 2048,
+    "top_p": 0.7,
     "temperature": 0.95,
     "max_new_tokens": 250,
     "history_enable": true,
-    "history_max_len": 20,
-    "preset": "现在你正在blibili进行直播。"
+    "history_max_len": 500
   },
   "sparkdesk": {
     "type": "web",
@@ -274,7 +264,7 @@
     "knowledge_base": {
       "knowledge_base_name": "ikaros",
       "top_k": 3,
-      "score_threshold": 1.0,
+      "score_threshold": 1,
       "stream": false,
       "model_name": "chatglm3-6b-int4",
       "temperature": 0.7,
@@ -372,19 +362,19 @@
   },
   "local_qa": {
     "text": {
-      "enable": false,
+      "enable": true,
       "type": "json",
       "file_path": "data/本地问答库.json",
       "similarity": 0.8,
       "username_max_len": 10
     },
     "audio": {
-      "enable": false,
+      "enable": true,
       "file_path": "out/本地问答音频/",
       "similarity": 0.5
     }
   },
-  "audio_synthesis_type": "vits",
+  "audio_synthesis_type": "edge-tts",
   "audio_random_speed": {
     "normal": {
       "enable": false,
@@ -398,11 +388,11 @@
     }
   },
   "vits": {
-    "type": "bert_vits2",
-    "config_path": "E:\\GitRepository\\vits-simple-api\\Model\\alice\\config.json",
+    "type": "vits",
+    "config_path": "E:\\vits-simple-api\\Model\\ikaros\\config.json",
     "api_ip_port": "http://127.0.0.1:23456",
     "id": "0",
-    "lang": "日文",
+    "lang": "自动",
     "length": "1",
     "noise": "0.33",
     "noisew": "0.4",
@@ -412,19 +402,19 @@
   },
   "bert_vits2": {
     "type": "hiyori",
-    "api_ip_port": "http://127.0.0.1:23456",
+    "api_ip_port": "http://127.0.0.1:5000",
     "model_id": 0,
-    "speaker_name": "alice",
+    "speaker_name": "ikaros",
     "speaker_id": 0,
-    "language": "JP",
-    "length": 1.0,
+    "language": "auto",
+    "length": 1,
     "noise": 0.2,
     "noisew": 0.9,
     "sdp_radio": 0.2,
-    "auto_translate": true,
+    "auto_translate": false,
     "auto_split": false,
     "emotion": "",
-    "style_text": null,
+    "style_text": "",
     "style_weight": 0.7
   },
   "vits_fast": {
@@ -520,12 +510,10 @@
     "language": "自动识别"
   },
   "choose_song": {
-    "enable": false,
+    "enable": true,
     "similarity": 0.5,
     "start_cmd": [
-      "唱首",
-      "唱个",
-      "点歌",
+      "点歌 ",
       "唱首",
       "唱个"
     ],
@@ -577,35 +565,35 @@
       {
         "file_path": "data/copywriting/",
         "audio_path": "out/copywriting/",
-        "continuous_play_num": 2,
-        "max_play_time": 10.0,
         "play_list": [
           "test.wav",
           "伊卡日语介绍.wav",
           "吐槽.wav"
-        ]
+        ],
+        "continuous_play_num": 2,
+        "max_play_time": 10.0
       },
       {
         "file_path": "data/copywriting2/",
         "audio_path": "out/copywriting2/",
-        "continuous_play_num": 2,
-        "max_play_time": 3.0,
         "play_list": [
           "test.wav",
           "test2.wav"
-        ]
+        ],
+        "continuous_play_num": 2,
+        "max_play_time": 3.0
       }
     ],
     "audio_interval": 5.0,
     "switching_interval": 5.0,
-    "random_play": false,
+    "random_play": true,
     "auto_play": false
   },
   "header": {
     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/113.0.0.0 Safari/537.36 Edg/113.0.1774.42"
   },
   "talk": {
-    "key_listener_enable": false,
+    "key_listener_enable": true,
     "device_index": "1",
     "username": "主人",
     "type": "google",
@@ -634,8 +622,7 @@
   },
   "captions": {
     "enable": true,
-    "file_path": "log/字幕.txt",
-    "raw_file_path": "log/原文字幕.txt"
+    "file_path": "log/字幕.txt"
   },
   "schedule": [
     {
@@ -672,7 +659,7 @@
       ]
     },
     "local_audio": {
-      "enable": false,
+      "enable": true,
       "random": true,
       "path": [
         "song/ikaros/枝垂樱-缩减版.mp3",
@@ -901,7 +888,8 @@
           "出其不意",
           "匪夷所思"
         ],
-        "gift": [],
+        "gift": [
+        ],
         "keys": [
           "c"
         ],
@@ -926,7 +914,8 @@
           "愤怒不平",
           "怒不可遏"
         ],
-        "gift": [],
+        "gift": [
+        ],
         "keys": [
           "v"
         ],
@@ -939,7 +928,8 @@
           "涩涩",
           "嘿嘿"
         ],
-        "gift": [],
+        "gift": [
+        ],
         "keys": [
           "a"
         ],
@@ -953,7 +943,8 @@
           "不悦",
           "严肃"
         ],
-        "gift": [],
+        "gift": [
+        ],
         "keys": [
           "s"
         ],
@@ -979,7 +970,8 @@
           "伤心落泪",
           "悲痛欲绝"
         ],
-        "gift": [],
+        "gift": [
+        ],
         "keys": [
           "d"
         ],
@@ -990,7 +982,8 @@
           "脸红",
           "害羞"
         ],
-        "gift": [],
+        "gift": [
+        ],
         "keys": [
           "f"
         ],
@@ -1001,7 +994,8 @@
           "睡觉",
           "困"
         ],
-        "gift": [],
+        "gift": [
+        ],
         "keys": [
           "2"
         ],
@@ -1014,7 +1008,8 @@
           "不是",
           "不对"
         ],
-        "gift": [],
+        "gift": [
+        ],
         "keys": [
           "3"
         ],
@@ -1023,14 +1018,14 @@
     ]
   },
   "translate": {
-    "enable": true,
+    "enable": false,
     "type": "baidu",
-    "trans_type": "回复",
+    "trans_type": "弹幕",
     "baidu": {
-      "appid": "20231223001919435",
-      "appkey": "sCAog1XZepdaQmhflyWm",
+      "appid": "",
+      "appkey": "",
       "from_lang": "auto",
-      "to_lang": "jp"
+      "to_lang": "zh"
     }
   },
   "abnormal_alarm": {
@@ -1111,7 +1106,7 @@
         "similarity": 0.8
       },
       "audio": {
-        "enable": false,
+        "enable": true,
         "type": "包含关系",
         "file_path": "out/本地问答音频-助播/",
         "similarity": 0.5
