新增：弹幕同步触发vl调用；修复：逻辑混乱问题；

--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     "password": "123456",
     "ums_api": "http://127.0.0.1:1119"
   },
-  "api_ip": "192.168.2.89",
+  "api_ip": "192.168.3.219",
   "api_port": 8082,
   "platform": "bilibili2",
   "room_display_id": "278333",
@@ -70,7 +70,7 @@
   },
   "play_audio": {
     "enable": true,
-    "text_split_enable": true,
+    "text_split_enable": false,
     "interval_num_min": 1,
     "interval_num_max": 2,
     "normal_interval_min": 0.3,
@@ -300,20 +300,20 @@
     "name": "Hiyori"
   },
   "openai": {
-    "api": "http://192.168.2.228:11434/v1",
+    "api": "https://dashscope.aliyuncs.com/compatible-mode/v1",
     "api_key": [
-      "sk"
+      "sk-"
     ]
   },
   "chatgpt": {
-    "model": "qwq:32b-fp16",
+    "model": "qwen-plus",
     "temperature": 0.9,
-    "max_tokens": 4096,
+    "max_tokens": 40960,
     "top_p": 1.0,
     "presence_penalty": 0.0,
     "frequency_penalty": 0.0,
-    "preset": "你是一个直播主持人，你的身后正在播放游戏《星际公民》实况直播，你的观众站在你面前，现在你需要根据直播现场描述和观众评论给出回应；你的回应必须包含在标点符号「」内；  回应使用日常聊天的口吻，您需要理解meme，并在列表清单中给出一个你认为合适的动作。你仅能选择一个动作；若认为没有必要输出情绪，选择普通动作；动作指令列在回应部分外。  普通动作列表：  伸出右手朝向对方   伸出双手朝向对方   双手叉腰  情绪化动作列表：  扶头思考   荣幸地单手抱胸   鼓掌鼓掌鼓掌   扣手扭捏    略带防御地抱胸并伸出右手  扶头且很无语    挥出双臂加油   摆手拒绝  双手合十拜托   评论：  主播今天这么早？",
-    "stream": true
+    "preset": "###  你是一个直播主持人，你的身后正在播放游戏《星际公民》实况直播，你的观众站在你面前，现在你需要根据直播现场描述和观众评论给出回应；你的回应必须包含在标点符号「」内；你的动作指令必须包含在标点符号[]内； 回应使用日常聊天的口吻，您需要理解评论中可能出现的meme但不要主动使用meme，并在列表清单中给出一个你认为合适的动作。你仅能选择一个动作；若认为没有必要输出情绪，选择普通动作；动作指令列在回应部分外。 普通动作列表：伸出右手朝向对方 伸出双手朝向对方 双手叉腰 情绪化动作列表：扶头思考 荣幸地单手抱胸 鼓掌鼓掌鼓掌 扣手扭捏  略带防御地抱胸并伸出右手 扶头且很无语 挥出双臂加油 摆手拒绝 双手合十拜托 ### 直播场景描述：屏幕显示的是一个科幻风格的内部场景，可能来自一款电子游戏或虚拟现实环境。画面中是一个现代化、高科技的走廊或通道，两侧有透明的窗户和门，透过窗户可以看到外部结构。走廊的设计简洁而未来感十足，使用了大量的冷色调灯光，营造出一种科技感强烈的氛围。  屏幕左侧有一个蓝色的控制面板，上面有一些模糊的图标和文字，但具体内容不清晰。右侧则是一个打开的舱门，门内似乎是一个设备室或存储区，内部有一些红色的线条和结构。地面上有明显的分隔线和标记，可能是用于导航或区分不同区域。  屏幕顶部显示了一些技术信息，包括坐标、位置、时间（8:57）以及其他参数，如FPS（帧率）、网络延迟等，表明这是一个实时运行的游戏或模拟环境。右下角有几个快捷键提示，分别对应“WEAPONS”、“THROWABLES”和“PHARMACOLOGY”，暗示玩家可以进行武器、投掷物或药物相关的操作。  整体来看，这个场景充满了未来科技元素，细节丰富，给人一种身临其境的感觉。 评论：挺好玩的样子",
+    "stream": false
   },
   "gpt4free": {
     "provider": "",
@@ -355,7 +355,7 @@
     "max_new_tokens": 250,
     "history_enable": true,
     "history_max_len": 20,
-    "preset": "你是一个直播主持人，你的身后正在播放游戏《星际公民》实况直播，你的观众站在你面前，现在你需要根据直播现场描述和观众评论给出回应；你的回应必须包含在标点符号「」内；  回应使用日常聊天的口吻，您需要理解meme，并在列表清单中给出一个你认为合适的动作。你仅能选择一个动作；若认为没有必要输出情绪，选择普通动作；动作指令列在回应部分外。  普通动作列表：  伸出右手朝向对方   伸出双手朝向对方   双手叉腰  情绪化动作列表：  扶头思考   荣幸地单手抱胸   鼓掌鼓掌鼓掌   扣手扭捏    略带防御地抱胸并伸出右手  扶头且很无语    挥出双臂加油   摆手拒绝  双手合十拜托   评论：  主播今天这么早？"
+    "preset": "###  你是一个直播主持人，你的身后正在播放游戏《星际公民》实况直播，你的观众站在你面前，现在你需要根据直播现场描述和观众评论给出回应；你的回应必须包含在标点符号「」内；你的动作指令必须包含在标点符号[]内； 回应使用日常聊天的口吻，您需要理解评论中可能出现的meme但不要主动使用meme，并在列表清单中给出一个你认为合适的动作。你仅能选择一个动作；若认为没有必要输出情绪，选择普通动作；动作指令列在回应部分外。 普通动作列表：伸出右手朝向对方 伸出双手朝向对方 双手叉腰 情绪化动作列表：扶头思考 荣幸地单手抱胸 鼓掌鼓掌鼓掌 扣手扭捏  略带防御地抱胸并伸出右手 扶头且很无语 挥出双臂加油 摆手拒绝 双手合十拜托 ### 直播场景描述：屏幕显示的是一个科幻风格的内部场景，可能来自一款电子游戏或虚拟现实环境。画面中是一个现代化、高科技的走廊或通道，两侧有透明的窗户和门，透过窗户可以看到外部结构。走廊的设计简洁而未来感十足，使用了大量的冷色调灯光，营造出一种科技感强烈的氛围。  屏幕左侧有一个蓝色的控制面板，上面有一些模糊的图标和文字，但具体内容不清晰。右侧则是一个打开的舱门，门内似乎是一个设备室或存储区，内部有一些红色的线条和结构。地面上有明显的分隔线和标记，可能是用于导航或区分不同区域。  屏幕顶部显示了一些技术信息，包括坐标、位置、时间（8:57）以及其他参数，如FPS（帧率）、网络延迟等，表明这是一个实时运行的游戏或模拟环境。右下角有几个快捷键提示，分别对应“WEAPONS”、“THROWABLES”和“PHARMACOLOGY”，暗示玩家可以进行武器、投掷物或药物相关的操作。  整体来看，这个场景充满了未来科技元素，细节丰富，给人一种身临其境的感觉。 评论：挺好玩的样子"
   },
   "sparkdesk": {
     "type": "api",
@@ -935,7 +935,7 @@
   "cosyvoice": {
     "type": "api",
     "gradio_ip_port": "http://192.168.3.99:9886",
-    "api_ip_port": "http://192.168.3.99:9933",
+    "api_ip_port": "http://192.168.3.219:9933",
     "gradio_0707": {
       "mode_checkbox_group": "预训练音色",
       "sft_dropdown": "中文女",
@@ -951,7 +951,7 @@
       "streaming": 0
     },
     "api": {
-      "tts_type": "clone",
+      "tts_type": "tts",
       "api_params": {
         "reference_audio": "/root/CosyVoice/tmp/1.wav",
         "reference_text": "主人说：你好",
@@ -1926,7 +1926,7 @@
     }
   },
   "webui": {
-    "ip": "192.168.2.89",
+    "ip": "192.168.3.219",
     "port": 8083,
     "title": "AI Vtuber",
     "auto_run": false,
